# hajimi-king

./: Dockerfile  app.py  env.example  pyproject.toml
app/: hajimi_king.py
common/: config.py
static/: dashboard.html  index.html
utils/: file_manager.py  github_client.py  sync_utils.py
