[project]
name = "hajimi-king"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.20",
]
